# decentralized-autonomouse-mower-service

./: .gitignore  .jsbeautifyrc  README.md  robot_launch.sh  run.sh
brownie/: brownie-config.yaml  get_robot_request_job.toml  get_robot_request_job_big_word.toml
brownie/contracts/: APIConsumer.sol  APIConsumer_v0.sol  Operator.sol  Oracle.sol  PriceConsumerV3.sol  RobotUrlAPIConsumer.sol  SimpleStorage.sol  decentralized_lawn_mower.sol  robot_camera_ipfs_nft.sol
brownie/contracts/mock/: MockV3Aggregator.sol
brownie/metadata/: test.json
brownie/scripts/: deploy.py  deploy_decentralized_lawn_mower.py  deploy_mocks.py  deploy_price_feed_consumer.py  get_account.py  read_value.py  run_contract_methods.py
brownie/tests/unit/: test_decentralized_lawn_mower.py  test_price_consumer.py  test_simple_storage.py
frontend/: api_contract.js  constants.js  https.py  index.css  index.html  index.js  localhost.pem  nft_minter_contract.js  notes.txt  server.sh
high_level_controller/: CMakeLists.txt  package.xml
high_level_controller/config/: controller_diff_drive.cfg
high_level_controller/launch/: path.launch  position_diff_drive.launch  position_pid.launch
high_level_controller/src/: NonLinearDifferentialController.py  controller.py  controller_non_linear_diff_drive.py  controller_non_linear_diff_drive_traj.py  controller_p.py  controller_pid.py  px4_communication.py  quaternion.py  scan_sonar.py  sliding_differentiator.py
navigation/amcl/src/: amcl_node.cpp
ngrok_ros/: CMakeLists.txt  README.md  package.xml
ngrok_ros/msg/: PublicURLs.msg
ngrok_ros/src/: ngrok_ros_bridge.py
ngrok_ros/srv/: StartTunnel.srv
ngrok_rosbridge_interface/: CMakeLists.txt  package.xml
ngrok_rosbridge_interface/launch/: ngrok_rosbridge_interface.launch
ngrok_rosbridge_interface/src/: ngrok_rosbridge_query_and_launch.py
ngrok_rosbridge_interface/src/certs/: server_csr.pem
notes/: gazebo.txt  notes.txt  px4.txt  rover.txt  ugv_utils.txt  utils.txt
path_planner/boustrophedon_optimal_path_planner/: CMakeLists.txt  package.xml  setup.py
path_planner/boustrophedon_optimal_path_planner/launch/: optimal_path_planner.launch
path_planner/boustrophedon_optimal_path_planner/src/: Boustrophedon_path.py  Contour.py  Decomposition.py  GA  GA.cpp  README.md  Redraw.py  Visibility.py  centroid_calculator.py  clipper.py  clipper_test2.py  optimal  optimal.cpp  optimal_path_planner.py  optimal_path_planner_node.py  perimeter.py  plot_results.py  publish_raw_path_from_fullpath_meters.py  test.py
path_planner/boustrophedon_optimal_path_planner/src/data_files/: fullpath.txt  fullpath_meters.txt  input.txt  input_raw.txt  optimal.txt  path_length.txt
path_planner/boustrophedon_optimal_path_planner/srv/: publish_raw_path_from_fullpath_meters.srv
path_planner/path_planner_from_points/: CMakeLists.txt  package.xml
path_planner/path_planner_from_points/launch/: path_planner_from_points.launch
path_planner/path_planner_from_points/src/: path_planner_from_points.py
perception/fake_odom_from_joints_or_cmdvel/: CMakeLists.txt  package.xml
perception/fake_odom_from_joints_or_cmdvel/include/fake_odometry/: fake_odometry.h
perception/fake_odom_from_joints_or_cmdvel/launch/: fake_odometry.launch
perception/fake_odom_from_joints_or_cmdvel/src/: fake_odometry.cpp
perception/fake_odom_from_model/: CMakeLists.txt  package.xml
perception/fake_odom_from_model/launch/: fake_odometry.launch
perception/fake_odom_from_model/src/: fake_odometry_from_model_state.py
perception/gaussian_noise/: CMakeLists.txt  package.xml
perception/gaussian_noise/launch/: gaussian_noise_odom.launch
perception/gaussian_noise/src/: gaussian_noise_odometry.py
robot_interface/: CMakeLists.txt  package.xml
robot_interface/launch/: robot_interface.launch
robot_interface/src/: ifps_image_poster.py  server_flask_app.py
rover_hardware_interface/: CMakeLists.txt  README.md  package.xml
rover_hardware_interface/config/: controllers.yaml  hardware.yaml  joint_limits.yaml  pidsim.yaml
rover_hardware_interface/include/rover_hardware_interface/: motor.h  rover_hardware.h  rover_hardware_interface.h
rover_hardware_interface/launch/: encoder.launch  rover_controller.launch
rover_hardware_interface/scripts/: encoder_filters.py  encoder_publisher.py  encoder_read.py  linear_EKF.py
rover_hardware_interface/scripts/encoder_data/: 2020-10-23-16-20-49.bag  raw_encoder_data.csv
rover_hardware_interface/src/: a.out  motor.cpp  rover_hardware_interface.cpp  rover_hardware_interface_node.cpp
rover_hardware_interface/test/: motor.test  motortest.cpp
set_speed_joint_cpp/: CMakeLists.txt  README.md  package.xml
set_speed_joint_cpp/launch/: simple.launch
set_speed_joint_cpp/models/simple_vehicle/: model.config  model.sdf
set_speed_joint_cpp/src/: set_speed_joint_plugin.cpp
set_speed_joint_cpp/worlds/: simple.world
turtlebot3_mower/: README.md
turtlebot3_mower/turtlebot3/turtlebot3_bringup/launch/: turtlebot3_remote.launch
turtlebot3_mower/turtlebot3/turtlebot3_description/config/: diff_drive.yaml
turtlebot3_mower/turtlebot3/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_bigger.gazebo.xacro  turtlebot3_waffle_bigger.urdf.xacro  turtlebot3_waffle_px4.gazebo.xacro  turtlebot3_waffle_px4.urdf.xacro
turtlebot3_mower/turtlebot3/turtlebot3_navigation/launch/: amcl.launch  amcl_humanitas.launch  move_base.launch  move_base_humanitas.launch  turtlebot3_navigation.launch  turtlebot3_navigation_humanitas.launch
turtlebot3_mower/turtlebot3/turtlebot3_navigation/maps/: map_house.pgm  map_house.yaml
turtlebot3_mower/turtlebot3/turtlebot3_navigation/param/: costmap_common_params_humanitas.yaml  costmap_common_params_waffle.yaml  global_costmap_params.yaml  global_costmap_params_humanitas.yaml  (+3 more)
web_rosbridge_interface/: CMakeLists.txt  package.xml
web_rosbridge_interface/launch/: web_rosbridge_interface.launch
web_rosbridge_interface/src/: web_rosbridge_query_and_launch.py
web_rosbridge_interface/src/certs/: server_cert.pem  server_key.pem
(+24 files in other folders)
