<?xml version="1.0"?>
<package format="2">
  <name>fake_odom_from_joints_or_cmdvel</name>
  <version>1.2.0</version>
  <description>
    Package for perception
  </description>
  <license>Apache 2.0</license>
  <author email="gpopmescu@gmail.com">Gpop</author>
  <maintainer email="gpopmescu@gmail.com">Gpop</maintainer>
  <url type="repository">https://github.com/gepopa10/autonomous-mower</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
